[plugin-excel] Enable loading of Excel files by `FROM_EXCEL` transformer